K8s-10-Ingress/grade-submission-portal/grade-submission-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grade-submission-portal-deployment   # name of the deployment 
  namespace: grade-submission
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: grade-submission-portal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grade-sumbission
        app.kubernetes.io/component: frontend   # app.kubernetes.io/component -> used to define the role of the application
        app.kubernetes.io/instance: grade-submission-portal # app.kubernetes.io/instance =>  identifies a specific instance or installation of an application.
    spec:  # Specification/spec a run-time configuration , What should Kubernetes actually run?, what specification for running container in pod
      containers:
      - name: grade-submission-portal
        image: rslim087/kubernetes-course-grade-submission-portal
        resources:
          requests: # requests is used to define the minimuim amount of memeory and cpu required for the application to function properly
            memory: "128Mi" # this is our workspace computers store and retrive date for processing 
            cpu: "200m"     # computation performer
          limits:
            memory: "128Mi"
        ports:
          - containerPort: 5001
